src/styles/main.scss
// @Author: francesco
// @Date:   2021-04-08T22:22:15+02:00
// @Last modified by:   francesco
// @Last modified time: 2021-04-11T14:19:52+02:00

@import url("https://use.typekit.net/vwi0ykr.css");

html {
  font-family: halyard-display, sans-serif;
  font-feature-settings: 'ss06' on, 'ss11' on, 'ss14' on, 'ss15' on, 'ss18' on;
  font-weight: 200;
  scroll-behavior: smooth;
}
* {
  box-sizing: border-box;
}


body {
  left: 0;
  top: 0;
  margin: 0;

  .App-main {
    height: 100vh;
    height: -webkit-fill-available;

    overflow-y: scroll;
    -webkit-overflow-scrolling: touch;

    display: flex;
    flex-direction: column;

    .vertical-view {
      flex: 0 0 100%;
      height: 100%;
      min-height: -webkit-fill-available;
    }

    #landing-view {
      position: relative;

      background-color: black;
      color: white;

      .landing-square-view {
        max-width: min(100vh, 100vw);
        margin: 0 auto;
      }

      h1 {
        margin: 15px 25px;

        font-weight: 800;
        font-size: min(17.5vh, 27.5vw);
        line-height: min(16.5vh, 25.5vw);
        letter-spacing: 0em;

        -webkit-touch-callout: none;
        -webkit-user-select: none;
        -moz-user-select: none;
        -ms-user-select: none;
        user-select: none;
      }
      .btn {
        display: block;
        font-size: 20px;

        padding: .5em 1.5em;
        margin-left: .25em;
        margin-right: .25em;

        .btn-content {
          flex: 1 0 auto;
          line-height: 20px;
        }

        &::after {
          content: '';
          position: absolute;
          right: 1em;
          top: 50%;
          height: 15px;
          width: 20px;
          transform: translateY(-50%);

          background-image: url('./../res/arrow.svg');
          background-repeat: no-repeat;
        }
      }

      .action-button-area {
        position: absolute;
        bottom: 0;
        left: 0;

        width: 100%;
        height: 25vh;

        display: flex;

        .action-button {
          margin: auto auto 0 auto;

          cursor: pointer;

          img {
            transform: rotate(90deg);
            margin-bottom: 42px;
          }
        }
      }
    }

    #site-content {

      .caret {
        position: relative;
        width: 100%;
        height: 100%;
        height: -webkit-fill-available;
        max-height: 100vh;

        .caret-page {
          height: 100%;
          max-height: 100%;
          overflow-y: auto;

          -webkit-touch-callout: none;
          -webkit-user-select: none;
          -moz-user-select: none;
          -ms-user-select: none;
          user-select: none;

          &:not(.glide__slide--active) {
            opacity: 20%;
            pointer-events: none;
          }
          transition: opacity 250ms ease-in-out;

          .caret-page-content {

            padding-bottom: 2em;

            & > *:not(.img-container, .card) {
              margin-left: 15px;
              margin-right: 15px;
            }

            h2 {
              margin-top: 1rem;
              margin-bottom: 2.5rem;

              font-size: 42px;
              line-height: 45px;
              font-weight: 300;

            }
            h3 {
              margin-top: 0;
              margin-bottom: 0;

              font-size: 32px;
              line-height: 32px;
              font-weight: 300;

            }

            p {
              font-size: 20px;
            }

            .content-popup {

              .action-container {
                position: relative;
                cursor: pointer;
              }
              .action-container::after {
                content: '';
                position: absolute;
                bottom: 0;
                right: 1rem;
                width: 42px;
                height: 42px;

                background-image: url("./../res/plus.svg");
              }
              .action-container.button-arrow::after {
                background-image: url("./../res/arrow_circle.svg");
              }
            }

            .img-container {
              width: 100%;

              img {
                max-width: 100%;
              }

              .action-container::after {
                bottom: 1rem;
              }

              .img-caption {
                margin: 0 2em;
                color: #666;
              }
            }

            .card {
              padding-top: 1em;
              padding-bottom: 1em;

              display: flex;
              flex-direction: column;

              &:not(.content-popup) > *, &.content-popup .action-container > * {
                padding-right: 1rem;
                padding-left: 1rem;
              }
              &.content-popup .action-container > * {
                padding-right: calc(1rem + 42px + 21px);
              }

              .btn {
                align-self: center;
                padding-right: 1.2em;
                padding-left: 1.2em;
              }

              h2 {
                margin-bottom: initial;
              }
            }
            .card:last-child {
              margin-bottom: -2em;
            }
          }
        }
      }

      .popup {
        display: none;
        z-index: 12000;

        position: fixed;
        width: 100%;
        height: 100%;
        top: 0;
        left: 0;

        overflow-y: auto;

        background-color: rgba(0,0,0,0.85);

        .popup-content {
          padding: 3em 1em;

          font-size: 32px;
          line-height: 32px;
          color: white;
          font-weight: 300;

          .close-me {
            position: fixed;
            top: 21px;
            right: 21px;
            width: 42px;
            height: 42px;

            cursor: pointer;

            background-image: url("./../res/plus.svg");
            transform: rotate(45deg);
          }
        }
      }

    }
  }

  .btn {
    position: relative;
    padding: .25em 1.5em;
    border-radius: 2em;

    text-decoration: none;
    font-family: halyard-display, sans-serif;

    &.btn-white {
      background-color: white;
      color: black;
    }
    &.btn-dark {
      background-color: #1a1a1a;
      color: white;
      border: 1px solid #464646;
    }
  }

  .hidden {
    display: none;
  }
  .text-caps {
    text-transform: uppercase;
  }
}

.hide-scroll-bars, .caret-page, .popup {
  ::-webkit-scrollbar {
    display: none;
  }
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}

@import 'slide_custom.scss';
@import '/styles/slide.css';

